--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ build/Release
 node_modules/
 jspm_packages/
 package-lock.json
+default-development/
+.eslintcache
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
