--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "buffer": "^6.0.3",
     "express": "^4.18.2",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
