--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "react-bootstrap-icons": "^1.10.2",
     "react-scripts": "^5.0.1",
     "xhr2": "^0.2.1"
   }
