--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.10.3",
     "buffer": "^6.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
