--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,17 @@
     "fs": "^0.0.1-security",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^5.1.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-multiselect": "^0.4.1",
+    "react-multiselect-dropdown": "^2.0.1",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
