--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "babel-jest": "^23.6.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "buffer": "^6.0.3",
