--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "react-bootstrap": "^2.7.2",
         "react-bootstrap-icons": "^1.10.2",
         "react-dom": "^18.2.0",
+        "react-form-with-constraints-bootstrap": "^0.19.1",
         "react-icons": "^4.7.1",
         "react-multiselect": "^0.3.1",
         "react-multiselect-dropdown": "^2.0.1",
